--- a/Labs/Phishing/configs/dovecot/conf.d/10-master.conf
+++ b/Labs/Phishing/configs/dovecot/conf.d/10-master.conf
@@ -16,7 +16,7 @@
 
 service imap-login {
   inet_listener imap {
-    port = 143
+    #port = 143
   }
   inet_listener imaps {
     #port = 993
@@ -25,19 +25,19 @@ service imap-login {
 
   # Number of connections to handle before starting a new process. Typically
   # the only useful values are 0 (unlimited) or 1. 1 is more secure, but 0
-  # is faster. <doc/wiki/LoginProcess.txt>
-  #service_count = 1
+  # is faster. <https://doc.dovecot.org/2.4.1/core/config/service.html#service_restart_request_count>
+  #service_restart_request_count = 1
 
   # Number of processes to always keep waiting for more connections.
   #process_min_avail = 0
 
-  # If you set service_count=0, you probably need to grow this.
-  #vsz_limit = $default_vsz_limit
+  # If you set service_restart_request_count=0, you probably need to grow this.
+  #vsz_limit = 256M # default
 }
 
 service pop3-login {
   inet_listener pop3 {
-    port = 110
+    #port = 110
   }
   inet_listener pop3s {
     #port = 995
@@ -49,26 +49,28 @@ service submission-login {
   inet_listener submission {
     #port = 587
   }
+  inet_listener submissions {
+    #port = 465
+  }
 }
 
 service lmtp {
   unix_listener lmtp {
-    mode = 0666
-    user = postfix
-    group = postfix
+    #mode = 0666
   }
 
   # Create inet listener only if you can't use the above UNIX socket
-  inet_listener lmtp {
+  #inet_listener lmtp {
     # Avoid making LMTP visible for the entire internet
-    port = 24 
-  }
+    #listen = 127.0.0.1
+    #port = 24
+  #}
 }
 
 service imap {
   # Most of the memory goes to mmap()ing files. You may need to increase this
   # limit if you have huge mailboxes.
-  #vsz_limit = $default_vsz_limit
+  #vsz_limit = 256M # default
 
   # Max. number of IMAP processes (connections)
   #process_limit = 1024
@@ -110,13 +112,13 @@ service auth {
   #}
 
   # Auth process is run as this user.
-  #user = $default_internal_user
+  #user = $SET:default_internal_user
 }
 
 service auth-worker {
   # Auth worker process is run as root by default, so that it can access
   # /etc/shadow. If this isn't necessary, the user should be changed to
-  # $default_internal_user.
+  # $SET:default_internal_user.
   #user = root
 }
 
