Fixed issue with not having an LMTP listener

--- a/Labs/Phishing/configs/dovecot/conf.d/10-master.conf
+++ b/Labs/Phishing/configs/dovecot/conf.d/10-master.conf
@@ -56,7 +56,7 @@ service submission-login {
 
 service lmtp {
   unix_listener lmtp {
-    #mode = 0666
+    mode = 0666
   }
 
   # Create inet listener only if you can't use the above UNIX socket
@@ -101,7 +101,7 @@ service auth {
   # something else than 0666 and Dovecot lets the kernel enforce the
   # permissions (e.g. 0777 allows everyone full permissions).
   unix_listener auth-userdb {
-    #mode = 0666
+    mode = 0666
     #user = 
     #group = 
   }
